Fix file dropzone flicker on drag over.

--- a/src/containers/Upload/Upload.scss
+++ b/src/containers/Upload/Upload.scss
@@ -49,6 +49,7 @@ section.upload
 
 			label.file
 			{
+				border: 1px solid transparent;
 				display: block;
 				height: 145px;
 				margin: 0 auto 0 auto;
